--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,25 @@
-.modal{
+.modal-box{
+  z-index: 1000;
   position: fixed;
   top: 20vw;
   left: 20vw;
   background-color: brown;
 }
+
+.add-event-button{
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  border-radius: 50%;
+  padding: 20px;
+  margin: 1% 3%;
+}
+
+.cancel-btn{
+  margin-right: 10px;
+}
+
+input{
+  width: 60%;
+}
+
